--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,13 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.13.0</version>
+      <version>4.26.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.10.2</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
